--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 , "engines": [ "node >=0.6.0" ]
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
-, "dependencies": { "underscore": ">=1.3.3" }
+, "dependencies": { "underscore": ">=1.3.3", "rimraf": ">=2.0.2" }
 , "repository":
   { "type" : "git"
   , "url" : "https://github.com/possibilities/meteorite.git"
