--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
 , "engines": [ "node >=0.6.0" ]
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
-, "dependencies": { "underscore": ">=1.3.3", "rimraf": ">=2.0.2" }
+, "dependencies": 
+  { "underscore": ">=1.3.3"
+  , "rimraf": ">=2.0.2"
+  , "commander": ">=0.6.1"
+  , "optimist": ">=0.3.4"
+  }
 , "repository":
   { "type" : "git"
   , "url" : "https://github.com/possibilities/meteorite.git"
