--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies": 
   { "underscore": ">=1.3.3"
-  , "rimraf": ">=2.0.2"
+  , "wrench": ">=1.3.9"
   , "commander": ">=0.6.1"
   , "optimist": ">=0.3.4"
+  , "underscore.string": ">=2.2.0rc"
   }
 , "repository":
   { "type" : "git"
