--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 , "dependencies": 
   { "underscore": ">=1.3.3"
   , "wrench": ">=1.3.9"
+  , "fstream": ">=0.1.18"
   , "commander": ">=0.6.1"
   , "optimist": ">=0.3.4"
   , "underscore.string": ">=2.2.0rc"
