--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   , "wrench": ">=1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
+  , "sync": ">=0.2.1"
   , "underscore.string": ">=2.2.0rc"
   }
 , "repository":
