--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 { "name": "meteorite"
-, "version": "0.0.2"
+, "version": "0.0.3"
+, "homepage": "http://possibilities.github.com/meteorite"
 , "engines": [ "node >=0.6.0" ]
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
