--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies": 
-  { "underscore": ">=1.3.3"
+  { "ddpclient": "git://github.com/possibilities/node-js_ddp-client.git#handle-connection-errors"
+  , "commander": ">=1.0.0"
+  , "underscore": ">=1.3.3"
   , "wrench": ">=1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
