--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies": 
-  { "ddpclient": "git://github.com/possibilities/node-js_ddp-client.git#handle-connection-errors"
+  { "ddp": ">= 0.2.0"
   , "commander": ">=1.0.0"
   , "underscore": ">=1.3.3"
   , "wrench": ">=1.3.9"
