--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies": 
   { "ddp": ">= 0.2.0"
-  , "commander": ">=1.0.0"
   , "underscore": ">=1.3.3"
   , "wrench": ">=1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
+  , "prompt": "0.2.3" // Anything newer blows up for me -Mike
   }
 , "devDependencies": 
   { "mocha": ">=1.2.2"
