--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   , "wrench": ">=1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
-  , "prompt": "0.2.3" // Anything newer blows up for me -Mike
+  , "prompt": "0.2.3"
   }
 , "devDependencies": 
   { "mocha": ">=1.2.2"
