--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
   , "prompt": "0.2.3"
+  , "colors": "0.6.0-1"
   }
 , "devDependencies": 
   { "mocha": ">=1.2.2"
