--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 , "engines": [ "node >=0.6.0" ]
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
-, "dependencies": 
+, "dependencies":
   { "ddp": ">=0.3.1"
   , "underscore": ">=1.3.3"
   , "wrench": ">=1.3.9"
@@ -13,13 +13,14 @@
   , "prompt": "0.2.3"
   , "colors": "0.6.0-1"
   }
-, "devDependencies": 
+, "devDependencies":
   { "mocha": ">=1.2.2"
   , "connect": ">=2.3.6"
   }
 , "scripts":
   { "test": "mocha spec/unit spec/acceptance -t 240000 -R spec"
   , "flushcache": "rm -rf spec/support/cache"
+  , "postinstall": "./completions/postinstall.sh"
   }
 , "repository":
   { "type" : "git"
