--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 { "name": "meteorite"
-, "version": "0.6.15"
+, "version": "0.6.16"
 , "homepage": "http://oortcloud.github.com/meteorite"
 , "engines": [ "node >=0.8.0" ]
 , "description": "Installer & smart package manager for Meteor"
-, "author": "Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
+, "author": "Tom Coleman <tom@percolatestudio.com> (http://percolatestudio.com), Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies":
   { "ddp": ">=0.3.1"
   , "underscore": ">=1.3.3"
