--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 , "author": "Tom Coleman <tom@percolatestudio.com> (http://percolatestudio.com), Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies":
   { "ddp": ">=0.3.1"
-  , "underscore": ">=1.3.3"
+  , "underscore": "1.3.3"
   , "wrench": ">=1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
