--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 , "dependencies":
   { "ddp": ">=0.3.1"
   , "underscore": "1.3.3"
-  , "wrench": ">=1.3.9"
+  , "wrench": "1.3.9"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
   , "prompt": "0.2.11"
