--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
 , "dependencies":
   { "ddp": ">=0.3.1"
   , "underscore": "1.3.3"
-  , "wrench": "1.3.9"
+  , "wrench": ">=1.5.5"
   , "fstream": ">=0.1.18"
   , "optimist": ">=0.3.4"
   , "prompt": "0.2.11"
   , "colors": "0.6.0-1"
   , "async": "0.2.9"
   , "rolling_timeout_exec": ">=0.0.1"
+  , "which": ">=1.0.5"
   }
 , "devDependencies":
   { "mocha": ">=1.2.2"
@@ -28,5 +29,5 @@
   { "type" : "git"
   , "url" : "https://github.com/oortcloud/meteorite.git"
   }
-, "bin" : { "mrt" : "./bin/mrt.js" }
+, "bin" : { "mrt" : "./bin/mrt.js", "meteorite" : "./bin/mrt.js" }
 }
