--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   , "async": "0.2.9"
   , "rolling_timeout_exec": ">=0.0.1"
   , "which": ">=1.0.5"
+  , "exit": ">=0.1.2"
   }
 , "devDependencies":
   { "mocha": ">=1.2.2"
