--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 { "name": "meteorite"
-, "version": "0.7.3"
+, "version": "0.7.4"
 , "homepage": "http://oortcloud.github.com/meteorite"
 , "engines": [ "node >=0.8.0" ]
 , "description": "Installer & smart package manager for Meteor"
 , "author": "Tom Coleman <tom@percolatestudio.com> (http://percolatestudio.com), Mike Bannister <notimpossiblemike@gmail.com> (http://po.ssibiliti.es)"
 , "dependencies":
-  { "ddp": ">=0.3.1"
+  { "ddp": ">=0.3.1 <0.5.0"
   , "underscore": "1.3.3"
   , "wrench": "1.3.9"
   , "fstream": ">=0.1.18"
